# interview-graphflow

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyrightconfig.json  tsconfig.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py  routes.py
backend/scripts/: generate_models.py
frontend/: .eslintrc.cjs  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/api/: client.ts
frontend/src/components/: FlowCanvas.tsx
shared/: generate-json-schema.ts  schemas.ts
